fix: fixed deposit visibility logic and also for unit

--- a/assets/style.css
+++ b/assets/style.css
@@ -194,6 +194,9 @@
   .tw\:max-w-full {
     max-width: 100%;
   }
+  .tw\:shrink-0 {
+    flex-shrink: 0;
+  }
   .tw\:cursor-pointer {
     cursor: pointer;
   }
@@ -224,8 +227,11 @@
   .tw\:overflow-visible\! {
     overflow: visible !important;
   }
-  .tw\:rounded-3xl {
-    border-radius: var(--tw-radius-3xl);
+  .tw\:px-4 {
+    padding-inline: calc(var(--tw-spacing) * 4);
+  }
+  .tw\:py-6 {
+    padding-block: calc(var(--tw-spacing) * 6);
   }
   .tw\:py-8 {
     padding-block: calc(var(--tw-spacing) * 8);
@@ -283,6 +289,11 @@
   .tw\:md\:overflow-hidden\! {
     @media (width >= 48rem) {
       overflow: hidden !important;
+    }
+  }
+  .tw\:md\:py-0 {
+    @media (width >= 48rem) {
+      padding-block: calc(var(--tw-spacing) * 0);
     }
   }
   .tw\:md\:pt-15 {
